
'''Improved'''
* #333: imProfile: added information on upload_max_size to upload config value descriptions | ticket from addons (Phoenyx)
* #322: imProfile: added "no content" messages to all content views | ticket from addons (Phoenyx)
* #---: introducing new IPF events beforeFileUnlink and afterFileUnlink (Phoenyx)
* #353: imProfile: tribes can be searched again | ticket from addons (Phoenyx)

'''Fixed'''
* #341: imProfile: don't show profile for inactive users | tickets from addons (Phoenyx)
* #776: fixed some issues with the search functionallity (Phoenyx)
* #621: fixed layout issue with social bookmark block and removed addto library (Phoenyx)
* #275: imProfile: restored friendship handling | ticket from addons (Phoenyx)
* #327: imProfile: fixed block My Friends | ticket from addons (Phoenyx)
* #325: imProfile: only accepted friendships are on the index view now | ticket from addons (Phoenyx)
* #347: imProfile: videos can now be deleted from the frontend | ticket from addons (Phoenyx)
* #252: imProfile: fixed display issue in user adminstration | ticket from addons (Phoenyx)
* #290: imProfile: added missing field types rank and theme to fields class | ticket from addons (Phoenyx)
* #320: imProfile: OpenID is editable now | ticket from addons (Phoenyx)
* #273: imProfile: fixed several wrong column value links in CP view | tickets from addons (Phoenyx)
* #307: imProfile: thumb and resized pictures are deleted when deleting or replacing the tribe image | ticket from addons (Phoenyx)
* #308: imProfile: when editing a picture you can no longer delete or replace it | ticket from addons (Phoenyx)
* #783: fixed OpenID Login switcher (Phoenyx)
* #787: Properly modifies the imagecategory table during an upgrade from previous versions (skenow)
* #351: imProfile: fixed field option handling on search form | ticket from addons (Phoenyx)
* #790: Adding new symlinks during upgrade (skenow)
* #788: Setting control panel blocks to visible (skenow)